--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+ .user-div{
+  border-style: solid;
+  border-color: beige;
+  border-width: 2px;
+  border-radius: 2px;
+  width:100px;
+  align-content: center;
+ }
+
